Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </head>
  
   <body>
-    Hello World!
+    <div>
+        <img src="images/mockup.jpeg" alt="my mockup">
+        <h2>MOCKUP D E A R</h2>
+    </div>
   </body>
  
 </html>
