Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   </head>
  
   <body>
-    <div>
-        <img src="images/mockup.jpeg" alt="my mockup">
-        <h2>MOCKUP D E A R</h2>
+    <div id="mockup-container">
+        <img id="mockup-iamge"src="images/mockup.jpeg" alt="my mockup">
+        <h2 id="mockup-name">MOCKUP D E A R</h2>
     </div>
   </body>
  
