added new div as header container with id = header

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
         <link rel="stylesheet" href="style.css">
   </head>
- 
   <body>
+    <div id="header">Header</div>
     <div id="mockup-container">
         <img id="mockup-iamge"src="images/mockup.jpeg" alt="my mockup">
         <h2 id="mockup-name">MOCKUP D E A R</h2>
     </div>
   </body>
- 
 </html>
