--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <img id="mockup-iamge"src="images/mockup.jpeg" alt="my mockup">
         <h2 id="mockup-name">MOCKUP D E A R</h2>
     </div>
+    <div id="footer">Footer</div>
   </body>
  
 </html>
